[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/player/live.png" type="Texture" id=3]
[ext_resource path="res://assets/font/minecraftia_regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LiveRect" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_right = 46.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.5
margin_top = -24.0
margin_right = 49.5
custom_fonts/font = SubResource( 2 )
text = "HighScore: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
